Updated css. Body no longer overlaps header in multi-page output

--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -81,7 +81,8 @@ p.table_source {
         margin: 0 auto;
     }
     div.content {
-        padding-top: 70pt;
+        position:relative;
+        top: 70pt;
     }
     div.section,
     div.row {
